Lesson 2: encode / decode.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "eslint": "eslint",
     "lint": "npm run eslint && npm run check-types",
     "tsc": "tsc",
-    "home-1-task-1": "npx ts-node ./src/lesson_1/task1.ts",
+    "home-1-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register ./src/lesson_1/task1.ts",
     "home-2-task-1": "tsc && browser-sync start --server --startPath src/lesson_2/task1/index.html",
-    "home-2-task-2": "npx ts-node ./src/lesson_2/task2/task.ts"
+    "home-2-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register ./src/lesson_2/task2/task.ts"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.7",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3"
   }
 }
