Lesson 3: linkedList / Structure.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "check-types": "tsc --noemit",
     "eslint": "eslint",
     "lint": "npm run eslint && npm run check-types",
-    "tsc": "tsc",
-    "home-1-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register ./src/lesson_1/task1.ts",
-    "home-2-task-1": "tsc && browser-sync start --server --startPath src/lesson_2/task1/index.html",
-    "home-2-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register ./src/lesson_2/task2/task.ts"
+    "home-1-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_1/task1.ts",
+    "home-2-task-1": "tsc && browser-sync start --server --startPath src/lessons/lesson_2/task1/index.html",
+    "home-2-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_2/task2/task.ts",
+    "home-3-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task1/index.ts",
+    "home-3-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task2/index.ts",
+    "home-3-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task3/index.ts"
   },
   "repository": {
     "type": "git",
