--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "home-4-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task1/index.ts",
     "home-4-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task2/index.ts",
     "home-4-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task3/index.ts",
-    "home-5-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task3/index.ts"
+    "home-5-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task3/index.ts",
+    "home-5-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task2/index.ts"
   },
   "repository": {
     "type": "git",
