--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "check-types": "tsc --noemit",
     "eslint": "eslint",
     "lint": "npm run eslint && npm run check-types",
+    "test": "jest",
     "home-1-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_1/task1.ts",
     "home-2-task-1": "tsc && browser-sync start --server --startPath src/lessons/lesson_2/task1/index.html",
     "home-2-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_2/task2/task.ts",
@@ -16,7 +17,8 @@
     "home-4-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task2/index.ts",
     "home-4-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task3/index.ts",
     "home-5-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task3/index.ts",
-    "home-5-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task2/index.ts"
+    "home-5-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task2/index.ts",
+    "home-6-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_6/task2/index.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
   },
   "homepage": "https://github.com/catchyn/cs_course_practice#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -37,7 +40,9 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
     "prettier": "2.8.7",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3"
