--- a/package.json
+++ b/package.json
@@ -7,20 +7,8 @@
     "eslint": "eslint",
     "lint": "npm run eslint && npm run check-types",
     "test": "jest",
-    "home-1-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_1/task1.ts",
-    "home-2-task-1": "tsc && browser-sync start --server --startPath src/lessons/lesson_2/task1/index.html",
-    "home-2-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_2/task2/task.ts",
-    "home-3-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task1/index.ts",
-    "home-3-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task2/index.ts",
-    "home-3-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_3/task3/index.ts",
-    "home-4-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task1/index.ts",
-    "home-4-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task2/index.ts",
-    "home-4-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_4/task3/index.ts",
-    "home-5-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task3/index.ts",
-    "home-5-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_5/task2/index.ts",
-    "home-6-task-1": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_6/task1/index.ts",
-    "home-6-task-2": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_6/task2/index.ts",
-    "home-6-task-3": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_6/task3/index.ts"
+    "hw-script-run": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_%npm_config_LESSON%/task%npm_config_TASK%/index.ts",
+    "hw-interface-run": "tsc && browser-sync start --server --startPath src/lessons/lesson_%npm_config_LESSON%/task%npm_config_TASK%/index.html"
   },
   "repository": {
     "type": "git",
