Lesson_12: Trie structure.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint": "eslint",
     "lint": "npm run eslint && npm run check-types",
     "test": "jest",
-    "hw-script-run": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_%npm_config_LESSON%/task%npm_config_TASK%/index.ts",
+    "hw-legacy-script-run": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_%npm_config_LESSON%/task%npm_config_TASK%/index.ts",
+    "hw-script-run": "npx ts-node -P tsconfig.node.json -r tsconfig-paths/register src/lessons/lesson_%npm_config_LESSON%/%npm_config_TASK%.ts",
     "hw-interface-run": "tsc && browser-sync start --server --startPath src/lessons/lesson_%npm_config_LESSON%/task%npm_config_TASK%/index.html"
   },
   "repository": {
