--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,7 @@
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
 
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "@typescript-eslint/no-unused-vars": "error"
   },
 
   "env": {
